# ChangeLog for mail-client/thunderbird-bin
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/mail-client/thunderbird-bin/ChangeLog,v 1.71 2012/04/30 12:28:01 ago Exp $

  30 Apr 2012; Agostino Sarubbo <ago@gentoo.org> thunderbird-bin-10.0.4.ebuild:
  Stable for amd64, wrt bug #413657

*thunderbird-bin-10.0.4 (27 Apr 2012)

  27 Apr 2012; Jeff Horelick <jdhore@gentoo.org> +thunderbird-bin-10.0.4.ebuild:
  Version bump to 10.0.4

*thunderbird-bin-12.0 (24 Apr 2012)

  24 Apr 2012; Jeff Horelick <jdhore@gentoo.org> +thunderbird-bin-12.0.ebuild:
  Version bump to Thunderbird 12.

  25 Mar 2012; Thomas Kahle <tomka@gentoo.org> thunderbird-bin-10.0.3.ebuild:
  marked x86 per bug 408161

  22 Mar 2012; Agostino Sarubbo <ago@gentoo.org> thunderbird-bin-10.0.3.ebuild:
  Stable for amd64, wrt bug #408161

*thunderbird-bin-10.0.3 (21 Mar 2012)

  21 Mar 2012; Jeff Horelick <jdhore@gentoo.org> +thunderbird-bin-10.0.3.ebuild:
  Version bump to 10.0.3(esr) for stable.

*thunderbird-bin-11.0 (14 Mar 2012)

  14 Mar 2012; Jeff Horelick <jdhore@gentoo.org> +thunderbird-bin-11.0.ebuild:
  Version bump.

  04 Mar 2012; Jeff Horelick <jdhore@gentoo.org> thunderbird-bin-10.0.2.ebuild:
  Add a -r pax-mark wrt bug 403689

  27 Feb 2012; Jeff Horelick <jdhore@gentoo.org> thunderbird-bin-10.0.2.ebuild:
  Add a RDEPEND on virtual/freedesktop-icon-theme to resolve bug 341697

  22 Feb 2012; Jeff Horelick <jdhore@gentoo.org> -thunderbird-bin-10.0.1.ebuild:
  Remove old.

  22 Feb 2012; Lars Wendler <polynomial-c@gentoo.org>
  thunderbird-bin-10.0.2.ebuild:
  Stable per bug #404437

  22 Feb 2012; Jeff Horelick <jdhore@gentoo.org> thunderbird-bin-10.0.2.ebuild:
  Restrict mirror and binchecks. This package is built by Mozilla so the
  binaries may not fit our QA policies.

  21 Feb 2012; Jeff Horelick <jdhore@gentoo.org> thunderbird-bin-10.0.2.ebuild:
  x86 stable wrt security bug 404437 .
