@@ -1,6 +1,10 @@
 # ChangeLog for mail-client/thunderbird
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/mail-client/thunderbird/ChangeLog,v 1.137 2012/04/30 16:57:20 anarchy Exp $
+# $Header: /var/cvsroot/gentoo-x86/mail-client/thunderbird/ChangeLog,v 1.138 2012/05/02 06:10:44 nativemad Exp $
+
+  02 May 2012; Andreas Schuerch <nativemad@gentoo.org>
+  thunderbird-10.0.4.ebuild:
+  x86 stable, see bug 413657. Thanks Mikle Kolyada.
 
 *thunderbird-12.0.1 (30 Apr 2012)
 
