@@ -1,6 +1,10 @@
 # ChangeLog for mail-client/thunderbird-bin
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/mail-client/thunderbird-bin/ChangeLog,v 1.71 2012/04/30 12:28:01 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/mail-client/thunderbird-bin/ChangeLog,v 1.72 2012/05/02 06:11:41 nativemad Exp $
+
+  02 May 2012; Andreas Schuerch <nativemad@gentoo.org>
+  thunderbird-bin-10.0.4.ebuild:
+  x86 stable, see bug 413657. Thanks Mikle Kolyada.
 
   30 Apr 2012; Agostino Sarubbo <ago@gentoo.org> thunderbird-bin-10.0.4.ebuild:
   Stable for amd64, wrt bug #413657
